package es.etg.daw.prog.mercadaw.model.util.input;


public abstract class FicheroImp implements Fichero{

    @Override
    public void escribir(String ruta, String texto) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'leer'");
    }

   @Override
    public byte[] leer(String fichero) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'leer'");
    }

  
    
}