package es.etg.daw.prog.mercadaw.model.util.input;

public enum Formato {
    BINARIO, MOCK
}
