@startuml input

set separator none
package es.etg.daw.prog.mercadaw.model.util.input{

    enum Formato{
        BINARIO, MOCK
    }

    class FicheroFactory{
        {static} + obtenerFicheroBinario():Fichero
    }

    class FicheroMock{

    }

    class FicheroBinario{

    }

    abstract FicheroImp{

    }

    interface Fichero{
        + escribir(fichero: String, texto :String) : void 
        + leer(fichero: String): byte[]

    }
}


FicheroImp <|-- FicheroBinario
FicheroMock ..|> Fichero
FicheroImp ..|> Fichero
@enduml